# idea

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/overlay/idea/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DiffUtils.c  DiffUtils.h  bspatch.c  bspatch.h  jni.cpp
app/src/main/java/com/example/overlay/idea/: Constants.java  DownloadService.java  InfoUtils.java  MainActivity.java  PatchUtils.java  SignUtils.java  StorageUtils.java  UpdateActivity.java  UpdateInfo.java  UpdateTask.java
app/src/main/res/layout/: activity_main.xml  activity_update2.xml  list_item.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/overlay/idea/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
